emoji_window/emoji_window.h



// 杩涘害鏉″洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *ProgressBarCallback)(HWND hProgressBar, int value);


// 鍥剧墖妗嗗洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *PictureBoxCallback)(HWND hPictureBox);
typedef void (__stdcall *SliderCallback)(HWND hSlider, int value);
typedef void (__stdcall *SwitchCallback)(HWND hSwitch, BOOL checked);
typedef void (__stdcall *NotificationCallback)(HWND hNotification, int event_type);

// 鍒楄〃妗嗗洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *ListBoxCallback)(HWND hListBox, int index);


    // 璁剧疆杩涘害鏉￠鑹?
    __declspec(dllexport) void __stdcall SetProgressBarColor(
        HWND hProgressBar,
        UINT32 fg_color,
        UINT32 bg_color
    );
    __declspec(dllexport) void __stdcall SetProgressBarTextColor(
        HWND hProgressBar,
        UINT32 text_color
    );

    // 璁剧疆杩涘害鏉″洖璋?
    __declspec(dllexport) void __stdcall SetProgressBarCallback(
        HWND hProgressBar,
        ProgressBarCallback callback
    );


    // 鍚敤/绂佺敤杩涘害鏉?
    __declspec(dllexport) void __stdcall EnableProgressBar(
        HWND hProgressBar,
        BOOL enable
    );


    // 鏄剧ず/闅愯棌杩涘害鏉?
    __declspec(dllexport) void __stdcall ShowProgressBar(
        HWND hProgressBar,
        BOOL show
    );


    // 璁剧疆杩涘害鏉′綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetProgressBarBounds(
        HWND hProgressBar,
        int x, int y, int width, int height
    );


    // 璁剧疆鏄惁鏄剧ず鐧惧垎姣旀枃鏈?
    __declspec(dllexport) void __stdcall SetProgressBarShowText(
        HWND hProgressBar,
        BOOL show_text
    );


    // ========== 鍥剧墖妗嗗姛鑳?==========

    // 鍒涘缓鍥剧墖妗?
    __declspec(dllexport) HWND __stdcall CreatePictureBox(
        HWND hParent,
        int x, int y, int width, int height,
        int scale_mode,     // 缂╂斁妯″紡: 0=涓嶇缉鏀? 1=鎷変几, 2=绛夋瘮缂╂斁, 3=灞呬腑
        UINT32 bg_color
    );


    // 浠庢枃浠跺姞杞藉浘鐗?
    __declspec(dllexport) BOOL __stdcall LoadImageFromFile(
        HWND hPictureBox,
        const unsigned char* file_path_bytes,
        int path_len
    );


    // 浠庡唴瀛樺姞杞藉浘鐗?
    __declspec(dllexport) BOOL __stdcall LoadImageFromMemory(
        HWND hPictureBox,
        const unsigned char* image_data,
        int data_len
    );


    // 娓呴櫎鍥剧墖
    __declspec(dllexport) void __stdcall ClearImage(
        HWND hPictureBox
    );


    // 璁剧疆鍥剧墖閫忔槑搴?
    __declspec(dllexport) void __stdcall SetImageOpacity(
        HWND hPictureBox,
        float opacity  // 0.0 - 1.0
    );


    // 璁剧疆鍥剧墖妗嗗洖璋?
    __declspec(dllexport) void __stdcall SetPictureBoxCallback(
        HWND hPictureBox,
        PictureBoxCallback callback
    );


    // 鍚敤/绂佺敤鍥剧墖妗?
    __declspec(dllexport) void __stdcall EnablePictureBox(
        HWND hPictureBox,
        BOOL enable
    );


    // 鏄剧ず/闅愯棌鍥剧墖妗?
    __declspec(dllexport) void __stdcall ShowPictureBox(
        HWND hPictureBox,
        BOOL show
    );


    // 璁剧疆鍥剧墖妗嗕綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetPictureBoxBounds(
        HWND hPictureBox,
        int x, int y, int width, int height
    );


    // 璁剧疆鍥剧墖妗嗙缉鏀炬ā寮?
    __declspec(dllexport) void __stdcall SetPictureBoxScaleMode(
        HWND hPictureBox,
        int scale_mode
    );


    // 璁剧疆鍥剧墖妗嗚儗鏅壊
    __declspec(dllexport) void __stdcall SetPictureBoxBackgroundColor(
        HWND hPictureBox,
        UINT32 bg_color
    );
    // ========== Slider ==========
    __declspec(dllexport) HWND __stdcall CreateSlider(
        HWND hParent,
        int x, int y, int width, int height,
        int min_value,
        int max_value,
        int value,
        int step,
        UINT32 active_color,
        UINT32 bg_color
    );
    __declspec(dllexport) int __stdcall GetSliderValue(HWND hSlider);
    __declspec(dllexport) void __stdcall SetSliderValue(HWND hSlider, int value);
    __declspec(dllexport) void __stdcall SetSliderRange(HWND hSlider, int min_value, int max_value);
    __declspec(dllexport) void __stdcall SetSliderStep(HWND hSlider, int step);
    __declspec(dllexport) void __stdcall SetSliderShowStops(HWND hSlider, BOOL show_stops);
    __declspec(dllexport) void __stdcall SetSliderColors(HWND hSlider, UINT32 active_color, UINT32 bg_color, UINT32 button_color);
    __declspec(dllexport) int __stdcall GetSliderColors(HWND hSlider, UINT32* active_color, UINT32* bg_color, UINT32* button_color);
    __declspec(dllexport) void __stdcall SetSliderCallback(HWND hSlider, SliderCallback callback);
    __declspec(dllexport) void __stdcall EnableSlider(HWND hSlider, BOOL enable);
    __declspec(dllexport) void __stdcall ShowSlider(HWND hSlider, BOOL show);
    __declspec(dllexport) void __stdcall SetSliderBounds(HWND hSlider, int x, int y, int width, int height);
    // ========== Switch ==========
    __declspec(dllexport) HWND __stdcall CreateSwitch(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL checked,
        UINT32 active_color,
        UINT32 inactive_color,
        const unsigned char* active_text_bytes,
        int active_text_len,
        const unsigned char* inactive_text_bytes,
        int inactive_text_len
    );
    __declspec(dllexport) BOOL __stdcall GetSwitchState(HWND hSwitch);
    __declspec(dllexport) void __stdcall SetSwitchState(HWND hSwitch, BOOL checked);
    __declspec(dllexport) void __stdcall SetSwitchText(
        HWND hSwitch,
        const unsigned char* active_text_bytes,
        int active_text_len,
        const unsigned char* inactive_text_bytes,
        int inactive_text_len
    );
    __declspec(dllexport) void __stdcall SetSwitchColors(HWND hSwitch, UINT32 active_color, UINT32 inactive_color);
    __declspec(dllexport) void __stdcall SetSwitchTextColors(HWND hSwitch, UINT32 active_text_color, UINT32 inactive_text_color);
    __declspec(dllexport) int __stdcall GetSwitchColors(HWND hSwitch, UINT32* active_color, UINT32* inactive_color, UINT32* active_text_color, UINT32* inactive_text_color);
    __declspec(dllexport) void __stdcall SetSwitchCallback(HWND hSwitch, SwitchCallback callback);
    __declspec(dllexport) void __stdcall EnableSwitch(HWND hSwitch, BOOL enable);
    __declspec(dllexport) void __stdcall ShowSwitch(HWND hSwitch, BOOL show);
    __declspec(dllexport) void __stdcall SetSwitchBounds(HWND hSwitch, int x, int y, int width, int height);
    // ========== Tooltip ==========
    __declspec(dllexport) HWND __stdcall CreateTooltip(
        HWND hOwner,
        const unsigned char* text_bytes,
        int text_len,
        int placement,
        UINT32 bg_color,
        UINT32 fg_color
    );
    __declspec(dllexport) void __stdcall SetTooltipText(
        HWND hTooltip,
        const unsigned char* text_bytes,
        int text_len
    );
    __declspec(dllexport) void __stdcall SetTooltipPlacement(HWND hTooltip, int placement);
    __declspec(dllexport) void __stdcall SetTooltipTheme(HWND hTooltip, int theme_mode);
    __declspec(dllexport) void __stdcall SetTooltipColors(HWND hTooltip, UINT32 bg_color, UINT32 fg_color, UINT32 border_color);
    __declspec(dllexport) void __stdcall SetTooltipFont(HWND hTooltip, const unsigned char* font_bytes, int font_len, float font_size);
    __declspec(dllexport) void __stdcall SetTooltipTrigger(HWND hTooltip, int trigger_mode);
    __declspec(dllexport) void __stdcall BindTooltipToControl(HWND hTooltip, HWND hTarget);
    __declspec(dllexport) void __stdcall ShowTooltipForControl(HWND hTooltip, HWND hTarget);
    __declspec(dllexport) void __stdcall HideTooltip(HWND hTooltip);
    __declspec(dllexport) void __stdcall DestroyTooltip(HWND hTooltip);
    // ========== Notification ==========
    __declspec(dllexport) HWND __stdcall ShowNotification(
        HWND hOwner,
        const unsigned char* title_bytes,
        int title_len,
        const unsigned char* message_bytes,
        int message_len,
        int type,
        int position,
        int duration_ms
    );
    __declspec(dllexport) void __stdcall SetNotificationCallback(HWND hNotification, NotificationCallback callback);
    __declspec(dllexport) void __stdcall CloseNotification(HWND hNotification);

    // ========== 鍒楄〃妗嗗姛鑳?==========

    // 鍒涘缓鍒楄〃妗?
    __declspec(dllexport) HWND __stdcall CreateListBox(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL multi_select,
        UINT32 fg_color,
        UINT32 bg_color
    );


    // 娣诲姞鍒楄〃椤?
    __declspec(dllexport) int __stdcall AddListItem(
        HWND hListBox,
        const unsigned char* text_bytes,
        int text_len
    );


    // 绉婚櫎鍒楄〃椤?
    __declspec(dllexport) void __stdcall RemoveListItem(
        HWND hListBox,
        int index
    );


    // 娓呯┖鍒楄〃妗?
    __declspec(dllexport) void __stdcall ClearListBox(
        HWND hListBox
    );


    // 鑾峰彇閫変腑椤圭储寮?
    __declspec(dllexport) int __stdcall GetSelectedIndex(
        HWND hListBox
    );


    // 璁剧疆閫変腑椤圭储寮?
    __declspec(dllexport) void __stdcall SetSelectedIndex(
        HWND hListBox,
        int index
    );


    // 鑾峰彇鍒楄〃椤规暟閲?
    __declspec(dllexport) int __stdcall GetListItemCount(
        HWND hListBox
    );


    // 鑾峰彇鍒楄〃椤规枃鏈?
    __declspec(dllexport) int __stdcall GetListItemText(
        HWND hListBox,
        int index,
        unsigned char* buffer,
        int buffer_size
    );


    // 璁剧疆鍒楄〃妗嗗洖璋?
    __declspec(dllexport) void __stdcall SetListBoxCallback(
        HWND hListBox,
        ListBoxCallback callback
    );


    // 鍚敤/绂佺敤鍒楄〃妗?
    __declspec(dllexport) void __stdcall EnableListBox(
        HWND hListBox,
        BOOL enable
    );


    // 鏄剧ず/闅愯棌鍒楄〃妗?
    __declspec(dllexport) void __stdcall ShowListBox(
        HWND hListBox,
        BOOL show
    );


    // 璁剧疆鍒楄〃妗嗕綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetListBoxBounds(
        HWND hListBox,
        int x, int y, int width, int height
    );
    __declspec(dllexport) void __stdcall SetListBoxColors(
        HWND hListBox,
        UINT32 fg_color,
        UINT32 bg_color,
        UINT32 select_color,
        UINT32 hover_color
    );


    // ========== 缁勫悎妗嗗姛鑳?==========

    // 鍒涘缓缁勫悎妗嗭紙澧炲己鐗堬級
    __declspec(dllexport) HWND __stdcall CreateComboBox(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL readonly,
        UINT32 fg_color,
        UINT32 bg_color,
        int item_height,                        // 琛ㄩ」楂樺害
        const unsigned char* font_name_bytes,  // 瀛椾綋鍚嶇О
        int font_name_len,
        int font_size,                          // 瀛椾綋澶у皬
        BOOL bold,                              // 绮椾綋
        BOOL italic,                            // 鏂滀綋
        BOOL underline                          // 涓嬪垝绾?
    );