examples/Csharp/Common/EmojiWindowNative.cs


        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetProgressBarColor(IntPtr hProgressBar, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetProgressBarTextColor(IntPtr hProgressBar, uint textColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetProgressBarCallback(IntPtr hProgressBar, ProgressBarCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableProgressBar(IntPtr hProgressBar, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowProgressBar(IntPtr hProgressBar, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetProgressBarBounds(IntPtr hProgressBar, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetProgressBarShowText(IntPtr hProgressBar, [MarshalAs(UnmanagedType.Bool)] bool showText);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateSlider(IntPtr parent, int x, int y, int width, int height, int minValue, int maxValue, int value, int step, uint activeColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetSliderValue(IntPtr hSlider);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSliderValue(IntPtr hSlider, int value);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSliderRange(IntPtr hSlider, int minValue, int maxValue);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSliderStep(IntPtr hSlider, int step);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSliderShowStops(IntPtr hSlider, [MarshalAs(UnmanagedType.Bool)] bool showStops);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSliderColors(IntPtr hSlider, uint activeColor, uint bgColor, uint buttonColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetSliderColors(IntPtr hSlider, out uint activeColor, out uint bgColor, out uint buttonColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSliderCallback(IntPtr hSlider, SliderCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableSlider(IntPtr hSlider, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowSlider(IntPtr hSlider, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSliderBounds(IntPtr hSlider, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateSwitch(IntPtr parent, int x, int y, int width, int height, [MarshalAs(UnmanagedType.Bool)] bool isChecked, uint activeColor, uint inactiveColor, byte[] activeTextBytes, int activeTextLen, byte[] inactiveTextBytes, int inactiveTextLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetSwitchState(IntPtr hSwitch);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSwitchState(IntPtr hSwitch, [MarshalAs(UnmanagedType.Bool)] bool isChecked);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSwitchText(IntPtr hSwitch, byte[] activeTextBytes, int activeTextLen, byte[] inactiveTextBytes, int inactiveTextLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSwitchColors(IntPtr hSwitch, uint activeColor, uint inactiveColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSwitchTextColors(IntPtr hSwitch, uint activeTextColor, uint inactiveTextColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetSwitchColors(IntPtr hSwitch, out uint activeColor, out uint inactiveColor, out uint activeTextColor, out uint inactiveTextColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSwitchCallback(IntPtr hSwitch, SwitchCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableSwitch(IntPtr hSwitch, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowSwitch(IntPtr hSwitch, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSwitchBounds(IntPtr hSwitch, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateTooltip(IntPtr owner, byte[] textBytes, int textLen, int placement, uint bgColor, uint fgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetTooltipText(IntPtr hTooltip, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetTooltipPlacement(IntPtr hTooltip, int placement);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetTooltipTheme(IntPtr hTooltip, int themeMode);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetTooltipColors(IntPtr hTooltip, uint bgColor, uint fgColor, uint borderColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetTooltipFont(IntPtr hTooltip, byte[] fontBytes, int fontLen, float fontSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetTooltipTrigger(IntPtr hTooltip, int triggerMode);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void BindTooltipToControl(IntPtr hTooltip, IntPtr hTarget);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowTooltipForControl(IntPtr hTooltip, IntPtr hTarget);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void HideTooltip(IntPtr hTooltip);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DestroyTooltip(IntPtr hTooltip);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr ShowNotification(IntPtr owner, byte[] titleBytes, int titleLen, byte[] messageBytes, int messageLen, int type, int position, int durationMs);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetNotificationCallback(IntPtr hNotification, NotificationCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void CloseNotification(IntPtr hNotification);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreatePictureBox(IntPtr parent, int x, int y, int width, int height, int scaleMode, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool LoadImageFromFile(IntPtr hPictureBox, byte[] pathBytes, int pathLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool LoadImageFromMemory(IntPtr hPictureBox, byte[] imageBytes, int imageLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ClearImage(IntPtr hPictureBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetImageOpacity(IntPtr hPictureBox, float opacity);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetPictureBoxCallback(IntPtr hPictureBox, PictureBoxCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnablePictureBox(IntPtr hPictureBox, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowPictureBox(IntPtr hPictureBox, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetPictureBoxBounds(IntPtr hPictureBox, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetPictureBoxScaleMode(IntPtr hPictureBox, int scaleMode);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetPictureBoxBackgroundColor(IntPtr hPictureBox, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateListBox(IntPtr parent, int x, int y, int width, int height, [MarshalAs(UnmanagedType.Bool)] bool multiSelect, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int AddListItem(IntPtr hListBox, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void RemoveListItem(IntPtr hListBox, int index);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ClearListBox(IntPtr hListBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetSelectedIndex(IntPtr hListBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetSelectedIndex(IntPtr hListBox, int index);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetListItemCount(IntPtr hListBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetListItemText(IntPtr hListBox, int index, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetListBoxCallback(IntPtr hListBox, ListBoxCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableListBox(IntPtr hListBox, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowListBox(IntPtr hListBox, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetListBoxBounds(IntPtr hListBox, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetListBoxColors(IntPtr hListBox, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateComboBox(IntPtr parent, int x, int y, int width, int height, [MarshalAs(UnmanagedType.Bool)] bool readOnly, uint fgColor, uint bgColor, int itemHeight, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline);
